--- a/SimplePortal/Areas/Admin/Views/User/Index.cshtml
+++ b/SimplePortal/Areas/Admin/Views/User/Index.cshtml
@@ -13,7 +13,7 @@
     @item.Uid <br />
     @item.Login <br />
     @item.Password <br />
-
+    @Html.ActionLink("Edit", "EditUser", new { uid = item.Uid })
     <br />
 }
 
