change password implemented

--- a/SimplePortal/Areas/Admin/Views/User/Index.cshtml
+++ b/SimplePortal/Areas/Admin/Views/User/Index.cshtml
@@ -12,8 +12,8 @@
     @item.Id <br />
     @item.Uid <br />
     @item.Login <br />
-    @item.Password <br />
     @Html.ActionLink("Edit", "EditUser", new { uid = item.Uid })
+    @Html.ActionLink("Change password", "ChangePassword", new { uid = item.Uid })
     <br />
 }
 
