--- a/SimplePortal/Areas/Admin/Views/User/EditUser.cshtml
+++ b/SimplePortal/Areas/Admin/Views/User/EditUser.cshtml
@@ -40,6 +40,7 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Login, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Login, "", new { @class = "text-danger" })
+                @Html.ActionLink("Change password", "ChangePassword", new {  uid = Model.Uid })
             </div>
         </div>
 
@@ -69,4 +70,5 @@
 
 <div>
     @Html.ActionLink("Back to List", "Index")
+    
 </div>
